# cherve-server

./: .gitignore  AGENTS.md  README.md  install_cherve.sh  install_chevre.sh  pyproject.toml
.github/workflows/: tests.yml
cherve/: __init__.py  cli.py  config.py  envfile.py  paths.py  server.py  site.py  system.py
cherve/templates/: 99-opcache.ini  99-php.ini  nginx_landing.conf  nginx_php_app.conf  nginx_site.conf
errors/: 1
tests/: conftest.py  test_cli_domain_add.py  test_cli_server_install.py  test_cli_site_activation.py  test_cli_site_create.py  test_cli_site_deploy.py  test_config.py  test_envfile.py  test_site_template.py  test_smoke.py  test_system.py
