[project]
name = "cherve"
version = "0.1.0"
description = "Sudo-first interactive server management CLI for PHP/Laravel apps."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
cherve = "cherve.cli:main"
