[project]
name = "cherve"
version = "0.1.0"
description = "Sudo-first interactive server management CLI for PHP/Laravel apps."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.0.0",
]

[project.scripts]
cherve = "cherve.cli:main"

[project.urls]
Repository = "https://github.com/channor/cherve-server"
Issues = "https://github.com/channor/cherve-server/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cherve = ["templates/*.ini", "templates/*.conf", "templates/*.local"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cherve*"]
